<resources>
    <string name="app_name">SoftMethProject5</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_york_style_pizza">New York Style Pizza</string>
    <string name="current_orders">Current Orders</string>
    <string name="order_number">Order Number</string>
    <string name="subtotal">Subtotal</string>
    <string name="sales_tax">Sales Tax</string>
    <string name="order_total">Order Total</string>
    <string name="place_order">Place Order</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="clear_order">Clear Order</string>
    <string name="store_orders">Store Orders</string>
    <string name="select_order">Select Order</string>
    <string name="cancel_order">Cancel Order</string>
</resources>